<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item_busca"
        android:title="@string/busca_cartela_numero"
        android:orderInCategory="1"
        android:icon="@drawable/ic_search"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
...
